--- a/referrer-portal/src/main/resources/templates/fragments/layout/footer.html
+++ b/referrer-portal/src/main/resources/templates/fragments/layout/footer.html
@@ -7,7 +7,7 @@
 				<div class="row w-row">
 					<div class="col-1-2 footer-cols w-col w-col-6 w-col-stack">
 						<div class="footer-text">
-							Copyright I-MED Radiology Network 2019 &nbsp;<span class="pipe-grey"> | </span>&nbsp; <a class="links-smaller" th:href="@{/terms}">Terms of
+							Copyright I-MED Radiology Network 2019 &nbsp;<span class="pipe-grey"> | </span>&nbsp; <a class="links-smaller" th:href="@{/termsofuse}">Terms of
 								Use </a>&nbsp; <span class="pipe-grey"> | </span> &nbsp; <a class="links-smaller" th:href="@{/privacy}">Privacy Policy</a>
 						</div>
 					</div>
