--- a/referrer-portal/src/main/resources/templates/admin.html
+++ b/referrer-portal/src/main/resources/templates/admin.html
@@ -8,6 +8,12 @@
 
 	<h1>Admin</h1>
 	
+	<div class="section">
+		<div class="wrapper">
+			<a th:href="@{/admin/approve}">Account Approver</a>
+		</div>
+	</div>
+
 	<div th:replace="fragments/layout/footer :: footer">...</div>
 </body>
 </html>
