--- a/referrer-portal/src/main/resources/templates/fragments/layout/head.html
+++ b/referrer-portal/src/main/resources/templates/fragments/layout/head.html
@@ -5,6 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Security-Policy" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    	
+		<!-- CSRF default header name is X-CSRF-TOKEN -->
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+		<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+
     
    	<link th:href="@{/images/public/favicon.ico}" rel="shortcut icon" type="image/x-icon" />
 <!--    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
@@ -29,7 +34,7 @@
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-		  gtag('config', 'UA-70757528-8');
+		  gtag('config', 'UA-70757528-6');
 		</script>    	
 	</head>
 </html>
