--- a/referrer-portal/src/main/resources/templates/about.html
+++ b/referrer-portal/src/main/resources/templates/about.html
@@ -160,7 +160,7 @@
 											class="goapply_one">
 											<div class="bg-gray">
 												<a class="button-primary feedback w-inline-block"
-													href="/wps/portal/doctor/Home/create">
+													th:href="@{/apply}">
 													<div class="button-primary-text">CREATE ACCOUNT</div>
 												</a>
 											</div>
@@ -427,7 +427,7 @@
 											class="goapply_one">
 											<div class="bg-gray">
 												<a class="button-primary feedback w-inline-block"
-													href="/wps/portal/doctor/Home/create">
+													th:href="@{/apply}">
 													<div class="button-primary-text">CREATE ACCOUNT</div>
 												</a>
 											</div>
