account admin ui base

--- a/referrer-portal/src/main/resources/templates/admin.html
+++ b/referrer-portal/src/main/resources/templates/admin.html
@@ -10,7 +10,8 @@
 	
 	<div class="section">
 		<div class="wrapper">
-			<a th:href="@{/admin/approve}">Account Approver</a>
+			<a th:href="@{/admin/approve}">Account Approver</a><br/>
+			<a th:href="@{/admin/account}">Account Manager</a>
 		</div>
 	</div>
 
