--- a/referrer-portal/src/main/resources/templates/account.html
+++ b/referrer-portal/src/main/resources/templates/account.html
@@ -6,20 +6,17 @@
 <body>
 	<div th:replace="fragments/layout/header :: header"></div>
 	
-	<div class="colour-light-grey section">
-    <div class="wrapper">
-      <h1>Referrer Account Manager</h1>
-
-			<div class="row w-row">
-				<div class="col-1-2 col-1-2-padding-left w-col w-col-6 col-centre">	
-					<link rel="stylesheet" th:href="@{/js/auth/account/dist/styles.css}">
-					<acntmgr-root></acntmgr-root>
-					<script type="text/javascript" th:src="@{/js/auth/account/dist/runtime.js}"></script>
-					<script type="text/javascript" th:src="@{/js/auth/account/dist/es2015-polyfills.js}" nomodule></script>
-					<script type="text/javascript" th:src="@{/js/auth/account/dist/polyfills.js}"></script>
-					<script type="text/javascript" th:src="@{/js/auth/account/dist/main.js}"></script>
-				</div>
-			</div>
+	<div class="section">
+		<div class="wrapper">
+			<h1>Referrer Account Manager</h1>
+		
+			<link rel="stylesheet" th:href="@{/js/auth/account/dist/styles.css}">
+			<div url="/referrer" id="admacntmgrapiroot"></div>
+			<acntmgr-root></acntmgr-root>
+			<script type="text/javascript" th:src="@{/js/auth/account/dist/runtime.js}"></script>
+			<script type="text/javascript" th:src="@{/js/auth/account/dist/es2015-polyfills.js}" nomodule></script>
+			<script type="text/javascript" th:src="@{/js/auth/account/dist/polyfills.js}"></script>
+			<script type="text/javascript" th:src="@{/js/auth/account/dist/main.js}"></script>
 		</div>
 	</div>
 	 
