base url by thymeleaf

--- a/referrer-portal/src/main/resources/templates/account.html
+++ b/referrer-portal/src/main/resources/templates/account.html
@@ -11,7 +11,7 @@
 			<h1>Referrer Account Manager</h1>
 		
 			<link rel="stylesheet" th:href="@{/js/auth/account/dist/styles.css}">
-			<div url="/referrer" id="admacntmgrapiroot"></div>
+			<div th:url="@{/}" id="admacntmgrapiroot"></div>
 			<acntmgr-root></acntmgr-root>
 			<script type="text/javascript" th:src="@{/js/auth/account/dist/runtime.js}"></script>
 			<script type="text/javascript" th:src="@{/js/auth/account/dist/es2015-polyfills.js}" nomodule></script>
