--- a/referrer-portal/src/main/resources/templates/results.html
+++ b/referrer-portal/src/main/resources/templates/results.html
@@ -8,7 +8,7 @@
 
 	<link th:href="@{/js/auth/results/dist/css/vendor.css}" rel="stylesheet"/>
 	<link th:href="@{/js/auth/results/dist/css/app.css}" rel="stylesheet"/>
-	<patptl-root></patptl-root>
+	<div id="body"></div>
 	<script type="text/javascript" th:src="@{/js/auth/results/dist/js/vendor.js}"></script>
 	<script type="text/javascript" th:src="@{/js/auth/results/dist/js/app.js}"></script>
 	
