--- a/referrer-portal/src/main/resources/templates/fragments/task/tandc.html
+++ b/referrer-portal/src/main/resources/templates/fragments/task/tandc.html
@@ -51,7 +51,7 @@
 		
 <script type="text/javascript" th:inline="javascript">
     $(document).ready(function () {
-    	var restRoot = /*[[@{imedvisage/v1}]]*/ "imedvisage/v1";
+    	var restRoot = /*[[@{/imedvisage/v1}]]*/ "imedvisage/v1";
 			$.ajax({
 				type: 'GET',
 		        cache: false,
@@ -73,7 +73,7 @@
 
 	// async: false to wait and reload page
     function setTandcPrefs(prefs) {
-    	var restRoot = /*[[@{imedvisage/v1}]]*/ "imedvisage/v1";
+    	var restRoot = /*[[@{/imedvisage/v1}]]*/ "imedvisage/v1";
     	$.ajax({
 				type: 'GET',
 				cache: false,
@@ -88,7 +88,7 @@
     }
 
     function showTandcDialog(dialogType){
-    	var restRoot = /*[[@{imedvisage/v1}]]*/  "imedvisage/v1";
+    	var restRoot = /*[[@{/imedvisage/v1}]]*/  "imedvisage/v1";
         $("#refPortalTandcDialog").css('display','block');
         $("#refPortalTandcDialog .dialog-content").load(restRoot + "/terms");
         if(dialogType == "warning") {
