Admin acntmgr debug : email checking, UI spacing on top

--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
 	
-	<div class="wpthemeControlBody wpthemeOverflowAuto wpthemeClear">
+	<div class="section wpthemeControlBody wpthemeOverflowAuto wpthemeClear">
 		<!-- lm:control dynamic spot injects markup of layout control -->
 		<!-- asa.overlay marks the node that the AsaOverlayWidget will be placed in -->
 		<div style="position: relative; z-index: 1;">
