--- a/referrer-portal/src/main/resources/templates/admin.html
+++ b/referrer-portal/src/main/resources/templates/admin.html
@@ -6,9 +6,9 @@
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
 
-	<h1>Admin</h1>
-	
 	<div class="section">
+		<h1>Admin</h1>
+		<div class="half-rule"></div>
 		<div class="wrapper">
 			<a th:href="@{/admin/approve}">Account Approver</a><br/>
 			<a th:href="@{/admin/account}">Account Manager</a>
