--- a/referrer-portal/src/main/resources/templates/hospital.html
+++ b/referrer-portal/src/main/resources/templates/hospital.html
@@ -6,12 +6,14 @@
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
 
-	<link rel="stylesheet" th:href="@{/js/auth/hospital/dist/styles.css}">
-	<hosal-root></hosal-root>
-	<script type="text/javascript" th:src="@{/js/auth/hospital/dist/runtime.js}"></script>
-	<script type="text/javascript" th:src="@{/js/auth/hospital/dist/es2015-polyfills.js}" nomodule></script>
-	<script type="text/javascript" th:src="@{/js/auth/hospital/dist/polyfills.js}"></script>
-	<script type="text/javascript" th:src="@{/js/auth/hospital/dist/main.js}"></script>
+	<div class="section">
+		<link rel="stylesheet" th:href="@{/js/auth/hospital/dist/styles.css}">
+		<hosal-root></hosal-root>
+		<script type="text/javascript" th:src="@{/js/auth/hospital/dist/runtime.js}"></script>
+		<script type="text/javascript" th:src="@{/js/auth/hospital/dist/es2015-polyfills.js}" nomodule></script>
+		<script type="text/javascript" th:src="@{/js/auth/hospital/dist/polyfills.js}"></script>
+		<script type="text/javascript" th:src="@{/js/auth/hospital/dist/main.js}"></script>
+	</div>
 	
 	<div th:replace="fragments/layout/footer :: footer">...</div>
 </body>
