hospital dynamic uri root

--- a/referrer-portal/src/main/resources/templates/hospital.html
+++ b/referrer-portal/src/main/resources/templates/hospital.html
@@ -8,6 +8,7 @@
 
 	<div class="section">
 		<link rel="stylesheet" th:href="@{/js/auth/hospital/dist/styles.css}">
+		<div th:url="@{/}" id="hospitalaccesstag"></div>
 		<hosal-root></hosal-root>
 		<script type="text/javascript" th:src="@{/js/auth/hospital/dist/runtime.js}"></script>
 		<script type="text/javascript" th:src="@{/js/auth/hospital/dist/es2015-polyfills.js}" nomodule></script>
