--- a/referrer-portal/src/main/resources/templates/mycrm.html
+++ b/referrer-portal/src/main/resources/templates/mycrm.html
@@ -8,7 +8,7 @@
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
 
-	<div class="wpthemeControlBody wpthemeOverflowAuto wpthemeClear top-bottom-space">
+	<div class="top-bottom-space">
 		<!-- lm:control dynamic spot injects markup of layout control -->
 		<!-- asa.overlay marks the node that the AsaOverlayWidget will be placed in -->
 		<div style="position: relative; z-index: 1;">
