feedback page styling

--- a/referrer-portal/src/main/resources/templates/feedback.html
+++ b/referrer-portal/src/main/resources/templates/feedback.html
@@ -8,14 +8,14 @@
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
 
-		<div>
+		<div class="section wrapper">
 			<div class="row w-row">
-				<div class="w-col w-col-4"></div>
-				<div class="w-col w-col-4">
+				<div class="w-col w-col-3"></div>
+				<div class="w-col w-col-6">
 					<iframe src="https://forms.i-medonline.com.au/forms/landing/org/app/ab77ade6-e38a-48be-8808-3c7d33e730bc/launch/index.html?form=F_Form1"
-						frameborder="0" height="700px" style="width: 100%; border: 0px;"></iframe>
+						frameborder="0" height="730px" style="width: 100%; border: 0px;"></iframe>
 				</div>
-				<div class="w-col w-col-4"></div>
+				<div class="w-col w-col-3"></div>
 			</div>
 		</div>
 
