--- a/referrer-portal/src/main/resources/templates/privacy.html
+++ b/referrer-portal/src/main/resources/templates/privacy.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:include="fragments/layout/head :: head">
-<title id="pageTitle">About</title>
+<title id="pageTitle">Privacy</title>
 </head>
 </head>
 <body>
@@ -14,8 +14,9 @@
 		<div style="position: relative; z-index: 1;">
 			<div class="analytics.overlay"></div>
 		</div>
-		<h1>Privacy Policy</h1>
-		<div class="wrapper">
+		<div class="section wrapper">
+			<h1>Privacy Policy</h1>
+			<div class="half-rule"></div>
 			<div class="row w-row">
 				<!-- help-section class added for custom heading style -->
 				<!-- <div class="w-col w-col-6 col-centre help-section"> -->
