--- a/referrer-portal/src/main/resources/templates/termsofuse.html
+++ b/referrer-portal/src/main/resources/templates/termsofuse.html
@@ -14,8 +14,9 @@
 		<div style="position: relative; z-index: 1;">
 			<div class="analytics.overlay"></div>
 		</div>
-		<h1>Terms of Use</h1>
-		<div class="wrapper">
+		<div class="section wrapper">
+			<h1>Terms of Use</h1>
+			<div class="half-rule"></div>
 			<div class="row w-row">
 				<!-- help-section class added for custom heading style -->
 				<!-- <div class="w-col w-col-6 col-centre help-section"> -->
