CRM table creation tool

--- a/referrer-portal/src/main/resources/templates/crmmanager.html
+++ b/referrer-portal/src/main/resources/templates/crmmanager.html
@@ -16,13 +16,7 @@
 		<h2>CRM Manager</h2>
 		<div class="half-rule"></div>
 		
-		      <form class="col s12" name="uploadForm" th:action="@{/editor/crmmanager}" enctype="multipart/form-data" method="post">
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="password" name="passcode" type="password" class="validate">
-            <label for="password">Passcode</label>
-          </div>
-        </div>
+		<form style="color:black;" class="col s12" name="uploadForm" th:action="@{/editor/crmmanager}" enctype="multipart/form-data" method="post">
         <div class="file-field input-field">
           <div class="btn">
             <span>Exel</span>
