Task85. Account application process enhancements : base

--- a/referrer-portal/src/main/resources/templates/apply.html
+++ b/referrer-portal/src/main/resources/templates/apply.html
@@ -15,7 +15,7 @@
 				Error: Unexpected problem occurred.
 			</div>
       <div th:if="${successMsg}" class="alert alert-success" role="alert"> 
-      	Thank you for registering for I-MED Online 2.0! Your application will be processed within one business day. You will receive and email confirmation with your username once complete.
+      	Thank you for registering for I-MED Online 2.0! Your application will be processed within one business day. You will receive and email confirmation with your username once complete. Note: You may need to check your junk folder for the email. If you do not receive your email within 2 days please contact your local CRM (Find service <a href="https://i-med.com.au/doctors/referrer-support">here</a>).
       </div>
 
 			<div class="row w-row">
