--- a/referrer-portal/src/main/resources/templates/support.html
+++ b/referrer-portal/src/main/resources/templates/support.html
@@ -142,7 +142,7 @@
 							I-MED Online 2.0 on my desktop? </a>
 						<div class="accordion-answer hide">
 							<p>To bookmark I-MED Online 2.0, 'Bookmark' or 'Favourite'
-								the I-MED Online 2.0 URL (https://portal.i-med.com.au). The
+								the I-MED Online 2.0 URL (https://i-medonline.com.au). The
 								address will then be saved in your internet browser. Then select
 								the 'Bookmark' or 'Favourite' and drag it onto the desktop to
 								create a 'short-cut'.</p>
