--- a/referrer-portal/src/main/resources/static/css/public/imedmain.css
+++ b/referrer-portal/src/main/resources/static/css/public/imedmain.css
@@ -182,3 +182,30 @@ text-align: center;
 .tnc span {
 						font-size: 11pt;
 }
+
+/* Instant Dialog by HTML */
+.ref-portal-instant-dialog-overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 20000;
+}
+
+.ref-portal-instant-dialog {
+  z-index: 21000;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 50px;
+  margin-right: auto;
+  margin-left: auto;
+  height: 90%;
+  width: 90%;
+  overflow-y: auto;
+  background-color: #FFFFFF;
+  padding: 12px;
+  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
+}
